Modulo para la emisión de Factura, nota de Crédito, Nota de Débito de Exportación Electrónica.

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = addons-konos
 	url = https://github.com/KonosCL/addons-konos
 	branch = 11.0
+[submodule "l10n_cl_dte_exportacion"]
+	path = l10n_cl_dte_exportacion
+	url = https://gitlab.com/dansanti/l10n_cl_dte_exportacion
+	branch = 11.0
