--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,7 @@
 	path = l10n_cl_dte_factoring
 	url = https://gitlab.com/dansanti/l10n_cl_dte_factoring
 	branch = 11.0
+[submodule "l10n_cl_dte_point_of_sale"]
+	path = l10n_cl_dte_point_of_sale
+	url = https://gitlab.com/dansanti/l10n_cl_dte_point_of_sale
+	branch = 11.0
